# F2iProject_vigil

./: .env.example  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: vigil.yml
src/vigil/: __init__.py  alerts.py  cli.py  comment_manager.py  context_manager.py  cross_specialist_dedup.py  decision_log.py  diff_parser.py  github.py  github_review.py  issue_manager.py  models.py  personas.py  reviewer.py  utils.py  webhook.py
tests/: test_alerts.py  test_comment_manager.py  test_context_manager.py  test_cross_round_cross_specialist_integration.py  test_cross_specialist_dedup.py  test_decision_log.py  test_diff_parser.py  test_http_errors.py  test_incremental_review.py  test_issue_manager.py  test_multi_round_simulation.py  test_reviewer.py  test_utils.py  test_webhook.py
